docs/api/0.2.0/ironwood/ds/ByteMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# ByteMap

**Class** · `ironwood.ds.ByteMap`

```java
public class ByteMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`ByteMap()`](#member-ByteMap-28--29-) |  |
| [`containsKey(byte)`](#member-containsKey-28-byte-29-) |  |
| [`put(byte,E)`](#member-put-28-byte-2c-E-29-) |  |
| [`get(byte)`](#member-get-28-byte-29-) |  |
| [`remove(byte)`](#member-remove-28-byte-29-) |  |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |

## Constructors

<a name="member-ByteMap-28--29-"></a>

### `ByteMap()`

```java
public ByteMap()
```


[Back to member summary](#member-summary)

## Methods

<a name="member-containsKey-28-byte-29-"></a>

### `containsKey(byte)`

```java
public boolean containsKey(byte key)
```


[Back to member summary](#member-summary)

<a name="member-put-28-byte-2c-E-29-"></a>

### `put(byte,E)`

```java
public E put(byte key, E value)
```


[Back to member summary](#member-summary)

<a name="member-get-28-byte-29-"></a>

### `get(byte)`

```java
public E get(byte key)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-byte-29-"></a>

### `remove(byte)`

```java
public E remove(byte key)
```


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public byte getCurrIteratorKey()
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
