docs/api/0.2.2-beta/ironwood/ds/ByteMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# ByteMap

**Class** · `ironwood.ds.ByteMap`

```java
public class ByteMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)

Maps byte keys to values.


## Member summary

[Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`ByteMap()`](#member-ByteMap-28--29-) | Creates a new ByteMap. |
| [`containsKey(byte)`](#member-containsKey-28-byte-29-) | Returns whether a value is associated with the supplied key. |
| [`containsValue(E)`](#member-containsValue-28-E-29-) | Returns whether the supplied value is present. |
| [`put(byte,E)`](#member-put-28-byte-2c-E-29-) | Associates the supplied key with the supplied value. |
| [`get(byte)`](#member-get-28-byte-29-) | Returns the requested value. |
| [`remove(byte)`](#member-remove-28-byte-29-) | Removes the requested value or entry. |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) | Returns the curr iterator key. |
| [`iterator()`](#member-iterator-28--29-) | Returns an iterator over this value's elements. |
| [`isEmpty()`](#member-isEmpty-28--29-) | Returns whether this value is empty. |
| [`clear()`](#member-clear-28--29-) | Removes all stored values. |
| [`size()`](#member-size-28--29-) | Returns the number of stored values. |
| [`equals(Object)`](#member-equals-28-Object-29-) | Tests this value for equality with another object. |
| [`hashCode()`](#member-hashCode-28--29-) | Returns this value's hash code. |
| [`toString()`](#member-toString-28--29-) | Returns a textual representation of this value. |

## Constructors

<a name="member-ByteMap-28--29-"></a>

### `ByteMap()`

```java
public ByteMap()
```

Creates a new ByteMap.


[Back to member summary](#member-summary)

## Methods

<a name="member-containsKey-28-byte-29-"></a>

### `containsKey(byte)`

```java
public boolean containsKey(byte key)
```

Returns whether a value is associated with the supplied key.


[Back to member summary](#member-summary)

<a name="member-containsValue-28-E-29-"></a>

### `containsValue(E)`

```java
public boolean containsValue(E value)
```

Returns whether the supplied value is present.


[Back to member summary](#member-summary)

<a name="member-put-28-byte-2c-E-29-"></a>

### `put(byte,E)`

```java
public E put(byte key, E value)
```

Associates the supplied key with the supplied value.


[Back to member summary](#member-summary)

<a name="member-get-28-byte-29-"></a>

### `get(byte)`

```java
public E get(byte key)
```

Returns the requested value.


[Back to member summary](#member-summary)

<a name="member-remove-28-byte-29-"></a>

### `remove(byte)`

```java
public E remove(byte key)
```

Removes the requested value or entry.


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public byte getCurrIteratorKey()
```

Returns the curr iterator key.


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```

Returns an iterator over this value's elements.


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```

Returns whether this value is empty.


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```

Removes all stored values.


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```

Returns the number of stored values.


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```

Tests this value for equality with another object.


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```

Returns this value's hash code.


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```

Returns a textual representation of this value.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
